--- a/src/components/ImageViewer/ImageModal.css
+++ b/src/components/ImageViewer/ImageModal.css
@@ -19,3 +19,19 @@
     opacity: 1
   }
 }
+
+.slide-fade-left-enter-active {
+  animation: fadeInLeft 0.267s;
+}
+
+.slide-fade-left-leave-active {
+  animation: unset;
+}
+
+.slide-fade-right-enter-active {
+  animation: fadeInRight 0.267s
+}
+
+.slide-fade-right-leave-active {
+  animation: unset;
+}
